--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>WebShopClient</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>WebShopClient</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript">
+      const stripe = Stripe(
+        "pk_test_51H7SueBwZUYCoNIIwwem3vIZjIwybKfRzeIeGJbiVJpwUAjrVEAq7NlrmPIiAtbGQZwGy5UvlAeEIuoSb8jvFPs500uDqcDNFB"
+      );
+      const elements = stripe.elements();
+    </script>
+  </body>
 </html>
