updated subscriptions to observables

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <app-root></app-root>
-    <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://js.stripe.com/v3/" async></script>
     <script type="text/javascript">
       const stripe = Stripe(
         "pk_test_51H7SueBwZUYCoNIIwwem3vIZjIwybKfRzeIeGJbiVJpwUAjrVEAq7NlrmPIiAtbGQZwGy5UvlAeEIuoSb8jvFPs500uDqcDNFB"
